<resources>
    <string name="app_name">DraxInfo</string>

    <string name="intelligence">Intelligence  </string>
    <string name="stength">Stength  </string>
    <string name="speed">Speed  </string>
    <string name="durability">Durability  </string>
    <string name="power">Power  </string>
    <string name="combat">Combat  </string>
    <string name="gender">Gender  </string>
    <string name="race">Race  </string>
    <string name="height">Height  </string>
    <string name="weight">Weight  </string>
    <string name="eyecolor">Eye-Color  </string>
    <string name="haircolor">Hair-Color  </string>
    <string name="occupation">Occupation  </string>
    <string name="base">Base  </string>
    <string name="groupaffilitate">Group-Affiliation  </string>
    <string name="relatives">Relatives  </string>
</resources>