<?xml version="1.0" encoding="utf-8"?>

<!--

        Nama        : Indi Bagus Prasetyo ;
        NIM         : 10121902 ;
        Kelas       : IF9K ;
        Mata Kuliah : Pemrograman Android ;
        Dosen       : Rizki Adam Kurniawan, M.Kom. ;
        Selesai     : 14 Juli 2024. 13:03 ;

        -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ivSuperhero"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:paddingTop="8dp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intelligence"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="5dp" />
                <TextView
                    android:id="@+id/tvIntelligence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:padding="5dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stength"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="5dp" />
                <TextView
                    android:id="@+id/tvStrength"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:padding="5dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speed"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="5dp" />
                <TextView
                    android:id="@+id/tvSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:padding="5dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/durability"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="5dp" />
                <TextView
                    android:id="@+id/tvDurability"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:padding="5dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/power"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="5dp" />
                <TextView
                    android:id="@+id/tvPower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:padding="5dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/combat"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="5dp" />
                <TextView
                    android:id="@+id/tvCombat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:padding="5dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="5dp" />
                <TextView
                    android:id="@+id/tvGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:padding="5dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/race"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="5dp" />
                <TextView
                    android:id="@+id/tvRace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:padding="5dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="5dp" />
                <TextView
                    android:id="@+id/tvHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:padding="5dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="5dp" />
                <TextView
                    android:id="@+id/tvWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:padding="5dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eyecolor"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="5dp" />
                <TextView
                    android:id="@+id/tvEyeColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:padding="5dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/haircolor"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="5dp" />
                <TextView
                    android:id="@+id/tvHairColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:padding="5dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/occupation"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="5dp" />
                <TextView
                    android:id="@+id/tvOccupation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:padding="5dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/base"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="5dp" />
                <TextView
                    android:id="@+id/tvBase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:padding="5dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/groupaffilitate"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="5dp" />
                <TextView
                    android:id="@+id/tvGroupAffiliation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:padding="5dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/relatives"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="5dp" />
                <TextView
                    android:id="@+id/tvRelatives"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:padding="5dp" />
            </TableRow>

        </TableLayout>

    </LinearLayout>
</ScrollView>
